--- a/VayCayPlannerWeb/appsettings.json
+++ b/VayCayPlannerWeb/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-VayCayPlannerWeb-47ee5bef-700b-4b04-9491-9301f77b975f;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"TODO": change the of the database
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-VayCayPlannerWeb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
